--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo/vector-icons": "^10.0.6",
     "axios": "^0.19.0",
     "expo": "33.0.0",
+    "expo-font": "~5.0.0",
     "jwt-decode": "^2.2.0",
     "mobx": "^5.15.0",
     "mobx-react": "^6.1.4",
@@ -20,11 +21,11 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-gesture-handler": "~1.2.1",
     "react-native-reanimated": "1.0.1",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^2.6.0",
-    "react-native-vector-icons": "^6.6.0"
+    "react-navigation-tabs": "^2.6.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
