--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.0.6",
+    "@expo/vector-icons": "^9.0.0",
     "axios": "^0.19.0",
     "expo": "33.0.0",
     "expo-font": "~5.0.0",
@@ -20,6 +20,8 @@
     "react-dom": "^16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-gesture-handler": "~1.2.1",
+    "react-native-ionicons": "^4.6.3",
+    "react-native-numeric-input": "^1.8.3",
     "react-native-reanimated": "1.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
