--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "16.8.3",
     "react-dom": "^16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native-collapsible": "^1.5.1",
     "react-native-gesture-handler": "~1.2.1",
     "react-native-ionicons": "^4.6.3",
     "react-native-numeric-input": "^1.8.3",
